--- a/Test/zwplibrary/src/main/res/values/colors.xml
+++ b/Test/zwplibrary/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="red">#ff3e3e</color>
-    <color name="blue">#2385ff</color>
+    <color name="blue">#119911</color>
 
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
