--- a/Test/zwplibrary/src/main/res/layout/activity_base.xml
+++ b/Test/zwplibrary/src/main/res/layout/activity_base.xml
@@ -2,7 +2,6 @@
    android:id="@+id/rl_base"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blue"
     android:clipToPadding="true"
     android:fitsSystemWindows="true"
     android:orientation="vertical">
@@ -14,6 +13,7 @@
         android:orientation="vertical"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
+        android:background="@drawable/background"
         android:layout_alignParentStart="true">
 
         <RelativeLayout
